--- a/foundItems.html
+++ b/foundItems.html
@@ -1,7 +1,7 @@
 <ol>
 
   <li ng-repeat="item in list.items">
-    {{item.name}}
+  <b>ShortName:</b> {{item.short_name}}, <b>Name:</b> {{item.name}}, <b>Description:</b> {{item.description}}
     <button ng-click="list.onRemove({index: $index});">Don't want this one!</button>
   </li>
 </ol>
